@@ -1,3 +1,15 @@
+2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/JComponent.java
+	(componentPopupMenu): New field,
+	(inheritsPopupMenu): New field,
+	(getInheritsPopupMenu): Implemented,
+	(setInheritsPopupMenu): Likewise,
+	(getComponentPopupMenu): Likewise,
+	(setComponentPopupMenu): Likewise,
+	* javax/swing/JLabel.java
+	(JLabel(String, Icon, int)): Set inheritsPopupMenu to true.
+
 2006-06-28  Raif S. Naffah  <raif@swiftdsl.com.au>
 
 	* gnu/javax/crypto/key/dh/GnuDHPublicKey.java (str): New field.
